--- a/index.html
+++ b/index.html
@@ -72,23 +72,17 @@
 <!-- Work Section -->
 <div class="w3-container" style="padding:128px 16px" id="work">
   <h3 class="w3-center">SHOP</h3>
-  <p class="w3-center w3-large">More merchandise will be coming soon!</p>
+  <p class="w3-center w3-large">More merchandise will be coming soon! Click on images to buy!</p>
 
   <div class="row" style="margin-top:64px">
     <div class="column">
-      <a href="https://superlativesshop.weebly.com/store/p3/Chaos_Theory_Bandana.html"><img src="https://i.ibb.co/v4LNm8b/Screenshot-2020-08-12-at-5-50-37-PM.png" style="width:100%;" onclick="onClick(this)" class="column" alt="A microphone">Chaos Theory Bandana <br>$8</a>
+      <a href="https://superlativesshop.weebly.com/store/p3/Chaos_Theory_Bandana.html"><img src="https://i.ibb.co/v4LNm8b/Screenshot-2020-08-12-at-5-50-37-PM.png" style="width:100%;" onclick="onClick(this)" class="column" alt="A microphone"></a>
     </div>
-	  <br>
-	  <br>
-	  <br>
     <div class="column">
-      <a href="https://superlativesshop.weebly.com/store/p1/Superlative_Chaos_Theory_Hoodie.html"><img src="https://i.ibb.co/cvwmrcP/Screenshot-2020-08-12-at-5-50-20-PM.png" style="width:100%" onclick="onClick(this)" class="column" alt="A phone">Chaos Theory Hoodie <br>$25</a>
+      <a href="https://superlativesshop.weebly.com/store/p1/Superlative_Chaos_Theory_Hoodie.html"><img src="https://i.ibb.co/cvwmrcP/Screenshot-2020-08-12-at-5-50-20-PM.png" style="width:100%" onclick="onClick(this)" class="column" alt="A phone"></a>
     </div>
-	  <br>
-	  <br>
-	  <br>
     <div class="column">
-      <a href="https://superlativesshop.weebly.com/store/p2/Chaos_Theory_Shirt.html"><img src="https://i.ibb.co/V2YyJ9P/Screenshot-2020-08-12-at-5-50-26-PM.png" style="width:100%" onclick="onClick(this)" class="column" alt="A phone">Chaos Theory Shirt <br>$20</a>
+      <a href="https://superlativesshop.weebly.com/store/p2/Chaos_Theory_Shirt.html"><img src="https://i.ibb.co/V2YyJ9P/Screenshot-2020-08-12-at-5-50-26-PM.png" style="width:100%" onclick="onClick(this)" class="column" alt="A phone"></a>
     </div>
   </div>
 </div>
